# Model-API

./: .example_env  .gitignore  README.md  pyproject.toml  requirements.txt
model_api/: app.py  model.py  schemas.py  settings.py
synomed_api/: api.py  app.py  schemas.py  settings.py
translate_api/: app.py  model.py  schemas.py  settings.py
