[project]
name = "synomed-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.2",
    "fastapi>=0.115.8",
    "huggingface-hub>=0.28.1",
    "pydantic-settings>=2.7.1",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "uvicorn>=0.34.0",
]
